# tv-invest-advisor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  Tasks.md  docker-compose.standalone.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .flake8  Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: routes.py
backend/app/core/: config.py  limiter.py
backend/app/services/: cache.py  embedder.py  generator.py  guardrails.py  ingestor.py  retriever.py
backend/eval/: golden_qa.json  matching.py  metrics.py
backend/eval/results/: baseline.json
backend/scripts/: eval_retrieval.py  extract_pptx.py  ingest.py  ingest_scraped.py  test_retrieval.py
backend/tests/: conftest.py
backend/tests/integration/: test_retriever_real.py  test_routes.py
backend/tests/unit/: test_cache.py  test_config.py  test_eval_metrics.py  test_generator.py  test_guardrails.py  test_ingest_scraped.py  test_ingestor.py  test_limiter.py  test_mock_mode.py  test_request_id_logging.py  test_retriever.py  test_routes.py
data/scraped/: as-seen-on-tv.txt  demand-generator.txt  payback-research.txt  peter-field-effectiveness.txt  signalling-success.txt  tv-viewing-report-2025.txt
docs/: audit-2026-06-12.md  security-audit-2026-05-28.md
docs/demo/: demo.webm
e2e/: capture-demo.config.ts  package-lock.json  package.json  playwright.config.ts
e2e/capture/: demo.spec.ts
e2e/tests/: app.spec.ts
frontend/: README.md  jest.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  (+2 more)
nginx/: Dockerfile  nginx.conf  nginx.dev.conf
(+62 files in other folders)
